Adding error responses of token for swagger docs
