# public/swagger.json
@@ -568,6 +568,16 @@
 							}
 						}
 					},
+					"403": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
 					"404": {
 						"description": "Model Not Found",
 						"content": {
@@ -654,6 +664,16 @@
 							}
 						}
 					},
+					"403": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
 					"404": {
 						"description": "Model Not Found",
 						"content": {
@@ -706,6 +726,16 @@
 						}
 					},
 					"400": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
+					"403": {
 						"description": "Bad Data",
 						"content": {
 							"application/json": {
@@ -774,6 +804,16 @@
 											"$ref": "#/components/schemas/ErrorResponse"
 										}
 									]
+								}
+							}
+						}
+					},
+					"403": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
 								}
 							}
 						}
@@ -868,6 +908,16 @@
 											"$ref": "#/components/schemas/ErrorResponse"
 										}
 									]
+								}
+							}
+						}
+					},
+					"403": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
 								}
 							}
 						}
@@ -1063,6 +1113,16 @@
 							}
 						}
 					},
+					"403": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
 					"404": {
 						"description": "Model Not Found",
 						"content": {
@@ -1139,6 +1199,16 @@
 											"$ref": "#/components/schemas/ErrorResponse"
 										}
 									]
+								}
+							}
+						}
+					},
+					"403": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
 								}
 							}
 						}
@@ -1238,6 +1308,16 @@
 						}
 					},
 					"400": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
+					"403": {
 						"description": "Bad Data",
 						"content": {
 							"application/json": {
@@ -1491,7 +1571,7 @@
 						}
 					},
 					"403": {
-						"description": "Missing Permissions",
+						"description": "Bad Data",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -1582,6 +1662,16 @@
 							}
 						}
 					},
+					"403": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
 					"404": {
 						"description": "Model Not Found",
 						"content": {
@@ -1655,6 +1745,16 @@
 						}
 					},
 					"400": {
+						"description": "Bad Data",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
+					"403": {
 						"description": "Bad Data",
 						"content": {
 							"application/json": {
